[package]
authors = ["Spanfile <spansdev@gmail.com>"]
categories = ["command-line-interface"]
description = "Blast DNS queries to a target as fast as humanely possible."
edition = "2018"
keywords = ["cli", "dns"]
license = "MIT"
name = "blarst"
readme = "README.md"
version = "0.1.0"

[dependencies]
anyhow = "1.0.32"
circular-queue = "0.2.6"
rand = "0.7.3"
structopt = "0.3.17"
tokio = {version = "0.2.22", features = ["rt-threaded", "udp", "macros", "sync", "time"]}
